Fixing up the form a bit more.

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -243,6 +243,9 @@ body {
     }
 }
 
+#email-warning, #subject-warning {
+    display: none;
+}
 input#human-check {
     padding: 5px;
     font-size: floor(@default-font-size * 0.25); 
