--- a/less/style.less
+++ b/less/style.less
@@ -192,9 +192,10 @@ body {
     }
     
     #submit-button {
-        .rounded-container(floor(@form-item-width * 0.35), 0px, 1px, @current-border-color + 3.00 * @shade-brighter, @current-background-color + 3.00 * @shade-brighter);
-        min-height: 20px;
+        .rounded-container(floor(@form-item-width * 0.5), 0px, 1px, @current-border-color + 3.00 * @shade-brighter, @current-background-color + 3.00 * @shade-brighter);
+              
         text-align: center;
+        vertical-align: middle;
         .transition(all, ease, 0.2s);
         background-color: @current-background-color + 0.25 * @shade-darker;
         border: solid 1px @current-background-color + @shade-brighter;
@@ -230,6 +231,14 @@ body {
         margin-left: 0px;
         vertical-align: middle;
     }
+    
+    #submit-button-text {
+        height: 50px;
+        vertical-align: middle;  
+    }
+}
+#email-warning, #subject-warning {
+    display: none;    
 }
 
 input#human-check {
