--- a/style/mobile.css
+++ b/style/mobile.css
@@ -364,6 +364,10 @@ body {
   margin-left: 0px;
   vertical-align: middle;
 }
+#email-warning,
+#subject-warning {
+  display: none;
+}
 input#human-check {
   padding: 5px;
   font-size: 12px;
