--- a/less/style.less
+++ b/less/style.less
@@ -3,7 +3,7 @@
 
 // derived values 
 @current-background-color: #bb8; //@default-background-color;
-@current-border-color: @current-background-color + 3.0 * @shade-darker; //@default-border-color
+@current-border-color: lighten(@current-background-color, 10%);
 @current-font-color: @current-background-color + 3.0* @shade-darker;
 @body-background-color: @current-background-color +  0.5 * @shade-brighter;
 
@@ -16,36 +16,34 @@ html {
     overflow-y: scroll;
 }
 
-@dark-stripe: darken(@body-background-color, 25%);
-@light-stripe: lighten(@body-background-color, 10%);
+@dark-stripe: darken(@body-background-color + @shade-darker, 1%);
+@light-stripe: lighten(@body-background-color + @shade-darker, 1%);
 body {
     //  background-color: @body-background-color;
     .no-space();
-    /*background-image: -webkit-gradient(
+    background-image: -webkit-gradient(
         linear, 
         left bottom, 
         right top, 
         color-stop(0, @dark-stripe), 
-        color-stop(0.25, @dark-stripe), 
-        color-stop(0.25, @light-stripe), 
+        color-stop(0.25, @dark-stripe),
+        color-stop(0.25, @light-stripe),
         color-stop(0.5, @light-stripe), 
         color-stop(0.5, @dark-stripe), 
         color-stop(0.75, @dark-stripe), 
         color-stop(0.75, @light-stripe));
     
     background-size: 20px 20px;
-    */
+
     .rounded-container(@default-page-width, 0px, 0px, @current-border-color, @current-background-color + @shade-darker);
     width:100%;
     height:100%;
 }
 
-
-
 #page {
 	width: @default-page-width;
 	height: @default-page-height;
-	.rounded-container(@default-page-width, 0px, 0px, @current-border-color, @body-background-color + @shade-darker);
+	.rounded-container(@default-page-width, 5px, 3px, @current-border-color , @body-background-color + @shade-darker);
 	padding: 25px;
 	margin: 25px auto;
 	.font;  
