--- a/style/style.css
+++ b/style/style.css
@@ -17,12 +17,8 @@
   src: local('Century Gothic'), url(/fonts/century-gothic.woff) format('woff');
 }
 .separator {
-  margin-left: 0px;
-  margin-right: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
-  min-height: 1px;
-  clear: both;
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 5px;
@@ -36,38 +32,24 @@ html {
 body {
   margin: 0px;
   padding: 0px;
-  /*background-image: -webkit-gradient(
-        linear, 
-        left bottom, 
-        right top, 
-        color-stop(0, @dark-stripe), 
-        color-stop(0.25, @dark-stripe), 
-        color-stop(0.25, @light-stripe), 
-        color-stop(0.5, @light-stripe), 
-        color-stop(0.5, @dark-stripe), 
-        color-stop(0.75, @dark-stripe), 
-        color-stop(0.75, @light-stripe));
-    
-    background-size: 20px 20px;
-    */
-
+  background-image: -webkit-gradient(linear, left bottom, right top, color-stop(0, #80804f), color-stop(0.25, #80804f), color-stop(0.25, #878752), color-stop(0.5, #878752), color-stop(0.5, #80804f), color-stop(0.75, #80804f), color-stop(0.75, #878752));
+  background-size: 20px 20px;
   width: 1280px;
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  border: 0px solid #000000;
+  border: 0px solid #cecea8;
   background-color: #4c4c19;
   width: 100%;
   height: 100%;
 }
 #page {
-  width: 1280px;
   height: auto;
   width: 1280px;
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  border-radius: 0px;
-  border: 0px solid #000000;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 3px solid #cecea8;
   background-color: #848451;
   padding: 25px;
   margin: 25px auto;
@@ -82,7 +64,7 @@ body {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  border: 0px solid #000000;
+  border: 0px solid #cecea8;
   background-color: #848451;
   padding-left: 5px;
   padding-right: 5px;
@@ -98,7 +80,7 @@ body {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  border: 0px solid #000000;
+  border: 0px solid #cecea8;
   background-color: #848451;
   float: right;
   margin-bottom: 5px;
@@ -139,19 +121,16 @@ body {
   transition-timing-function: ease;
   transition-delay: 0s;
   /* Firefox 4 */
-
   -moz-transition-property: all;
   -moz-transition-duration: 0.2s;
   -moz-transition-timing-function: ease;
   -moz-transition-delay: 0s;
   /* Safari and Chrome */
-
   -webkit-transition-property: all;
   -webkit-transition-duration: 0.2s;
   -webkit-transition-timing-function: ease;
   -webkit-transition-delay: 0s;
   /* Opera */
-
   -o-transition-property: all;
   -o-transition-duration: 0.2s;
   -o-transition-timing-function: ease;
@@ -195,19 +174,16 @@ body {
   transition-timing-function: none;
   transition-delay: 0s;
   /* Firefox 4 */
-
   -moz-transition-property: none;
   -moz-transition-duration: 0s;
   -moz-transition-timing-function: none;
   -moz-transition-delay: 0s;
   /* Safari and Chrome */
-
   -webkit-transition-property: none;
   -webkit-transition-duration: 0s;
   -webkit-transition-timing-function: none;
   -webkit-transition-delay: 0s;
   /* Opera */
-
   -o-transition-property: none;
   -o-transition-duration: 0s;
   -o-transition-timing-function: none;
@@ -219,7 +195,7 @@ body {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  border: 0px solid #000000;
+  border: 0px solid #cecea8;
   background-color: #bbbb88;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -236,19 +212,16 @@ body {
   transition-timing-function: ease;
   transition-delay: 0s;
   /* Firefox 4 */
-
   -moz-transition-property: all;
   -moz-transition-duration: 0.2s;
   -moz-transition-timing-function: ease;
   -moz-transition-delay: 0s;
   /* Safari and Chrome */
-
   -webkit-transition-property: all;
   -webkit-transition-duration: 0.2s;
   -webkit-transition-timing-function: ease;
   -webkit-transition-delay: 0s;
   /* Opera */
-
   -o-transition-property: all;
   -o-transition-duration: 0.2s;
   -o-transition-timing-function: ease;
@@ -293,11 +266,10 @@ body {
 }
 #contact-form input {
   width: 576px;
-  width: 576px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  border: 1px solid #bbbb88;
+  border: 1px solid #ffffff;
   background-color: #ffffff;
   min-height: 25px;
   padding: 5px;
@@ -305,13 +277,12 @@ body {
   font-size: 24px;
 }
 #contact-form textarea {
-  width: 576px;
   min-height: 150px;
   width: 576px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  border: 1px solid #bbbb88;
+  border: 1px solid #ffffff;
   background-color: #ffffff;
   padding: 5px;
   font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
@@ -322,7 +293,7 @@ body {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  border: 1px solid #bbbb88;
+  border: 1px solid #ffffff;
   background-color: #ffffff;
   text-align: center;
   vertical-align: middle;
@@ -331,19 +302,16 @@ body {
   transition-timing-function: ease;
   transition-delay: 0s;
   /* Firefox 4 */
-
   -moz-transition-property: all;
   -moz-transition-duration: 0.2s;
   -moz-transition-timing-function: ease;
   -moz-transition-delay: 0s;
   /* Safari and Chrome */
-
   -webkit-transition-property: all;
   -webkit-transition-duration: 0.2s;
   -webkit-transition-timing-function: ease;
   -webkit-transition-delay: 0s;
   /* Opera */
-
   -o-transition-property: all;
   -o-transition-duration: 0.2s;
   -o-transition-timing-function: ease;
@@ -404,7 +372,6 @@ input#human-check {
   font-size: 38px;
 }
 .social-icon {
-  width: 125px;
   height: 125px;
   width: 125px;
   -webkit-border-radius: 0px;
@@ -417,19 +384,16 @@ input#human-check {
   transition-timing-function: ease;
   transition-delay: 0s;
   /* Firefox 4 */
-
   -moz-transition-property: all;
   -moz-transition-duration: 0.2s;
   -moz-transition-timing-function: ease;
   -moz-transition-delay: 0s;
   /* Safari and Chrome */
-
   -webkit-transition-property: all;
   -webkit-transition-duration: 0.2s;
   -webkit-transition-timing-function: ease;
   -webkit-transition-delay: 0s;
   /* Opera */
-
   -o-transition-property: all;
   -o-transition-duration: 0.2s;
   -o-transition-timing-function: ease;
@@ -498,19 +462,16 @@ input#captcha-code {
   transition-timing-function: ease;
   transition-delay: 0s;
   /* Firefox 4 */
-
   -moz-transition-property: all;
   -moz-transition-duration: 0.2s;
   -moz-transition-timing-function: ease;
   -moz-transition-delay: 0s;
   /* Safari and Chrome */
-
   -webkit-transition-property: all;
   -webkit-transition-duration: 0.2s;
   -webkit-transition-timing-function: ease;
   -webkit-transition-delay: 0s;
   /* Opera */
-
   -o-transition-property: all;
   -o-transition-duration: 0.2s;
   -o-transition-timing-function: ease;
