--- a/style/style.css
+++ b/style/style.css
@@ -495,3 +495,52 @@ input#captcha-code {
 #subject-warning {
   color: red;
 }
+.loader {
+  background-image: url('/images/loading3.gif');
+  min-height: 60px;
+  width: inherit;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+#latest-articles {
+  padding: 5px;
+}
+.latest-entry-content-item {
+  width: 1024px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  border: 5px solid #2b2b19;
+  background-color: #e0e0c9;
+  font-size: 14px;
+  margin: 10px;
+  padding: 5px;
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+  /* Firefox 4 */
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.2s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0s;
+  /* Safari and Chrome */
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.2s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0s;
+  /* Opera */
+  -o-transition-property: all;
+  -o-transition-duration: 0.2s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0s;
+  cursor: pointer;
+}
+.latest-entry-content-item:hover {
+  width: 1024px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  border: 5px solid #2b2b19;
+  background-color: #cecea8;
+}
