--- a/less/style.less
+++ b/less/style.less
@@ -308,7 +308,6 @@ input#human-check {
     clear: both;
 }
 
-
 // captcha
 #captcha, #captcha-refresh, #captcha-code {
     float: left;
@@ -354,4 +353,26 @@ input#captcha-code {
 
 #email-warning, #subject-warning {
     color: red;
+}
+
+@about-content-font-size: @default-font-size * 0.75;
+
+#about-container {
+  margin: 10px;
+  padding: 10px;
+}
+
+
+.about-content {
+  @font-size: @about-content-font-size;
+  margin: 10px;
+}
+
+.about-content-header {
+  @font-size: @about-content-font-size;
+}
+
+.about-content-detail {
+  list-style-type: square;
+  font-size: @about-content-font-size;
 }
