--- a/style/style.css
+++ b/style/style.css
@@ -54,7 +54,7 @@ body {
   padding: 25px;
   margin: 25px auto;
   font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 48px;
+  font-size: 24px;
   font-weight: normal;
   color: #000000;
   min-height: 40 0px;
@@ -73,7 +73,7 @@ body {
   margin-top: 1px;
   margin-bottom: 1px;
   font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 120px;
+  font-size: 60px;
 }
 #navigation {
   width: 1280px;
@@ -136,7 +136,7 @@ body {
   -o-transition-timing-function: ease;
   -o-transition-delay: 0s;
   font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 43px;
+  font-size: 21px;
   font-weight: normal;
   color: #000000;
 }
@@ -236,7 +236,7 @@ body {
 }
 #latest h1 {
   font-weight: bold;
-  font-size: 57.599999999999994px;
+  font-size: 28.799999999999997px;
   margin: 0px;
   padding: 0px;
   padding-left: 10px;
@@ -255,14 +255,14 @@ body {
   width: 80%;
   padding: 0px;
   margin: 5px;
-  font-size: 24px;
+  font-size: 12px;
 }
 #contact-form p {
   margin: 5px;
   padding: 0px;
   font-weight: bold;
   text-align: center;
-  font-size: 38px;
+  font-size: 19px;
 }
 #contact-form input {
   width: 576px;
@@ -274,7 +274,7 @@ body {
   min-height: 25px;
   padding: 5px;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 12px;
 }
 #contact-form textarea {
   min-height: 150px;
@@ -286,7 +286,7 @@ body {
   background-color: #ffffff;
   padding: 5px;
   font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 24px;
+  font-size: 12px;
 }
 #contact-form #submit-button {
   width: 288px;
@@ -336,7 +336,7 @@ body {
   display: inline;
   text-align: left;
   padding: 1px;
-  font-size: 19px;
+  font-size: 9px;
   margin-left: 0px;
   vertical-align: middle;
   height: 20px;
@@ -357,7 +357,7 @@ body {
 }
 input#human-check {
   padding: 5px;
-  font-size: 12px;
+  font-size: 6px;
 }
 #social-links {
   width: 576px;
@@ -369,7 +369,7 @@ input#human-check {
   padding: 0px;
   font-weight: bold;
   text-align: center;
-  font-size: 38px;
+  font-size: 19px;
 }
 .social-icon {
   height: 125px;
@@ -426,7 +426,7 @@ input#human-check {
   margin-bottom: 15px;
 }
 #hey-there {
-  font-size: 120px;
+  font-size: 60px;
 }
 .clearer {
   clear: both;
@@ -442,7 +442,7 @@ input#human-check {
 input#captcha-code {
   width: 201.6px;
   margin: 0px;
-  font-size: 14.399999999999999px;
+  font-size: 7.199999999999999px;
   font-weight: normal;
   margin-bottom: 5px;
 }
@@ -476,7 +476,7 @@ input#captcha-code {
   -o-transition-duration: 0.2s;
   -o-transition-timing-function: ease;
   -o-transition-delay: 0s;
-  font-size: 19.200000000000003px;
+  font-size: 9.600000000000001px;
   text-align: center;
   padding: 5px;
 }
@@ -494,4 +494,15 @@ input#captcha-code {
 #email-warning,
 #subject-warning {
   color: red;
+}
+#about-container {
+  margin: 10px;
+  padding: 10px;
+}
+.about-content {
+  margin: 10px;
+}
+.about-content-detail {
+  list-style-type: square;
+  font-size: 18px;
 }
